@@ -5,22 +5,34 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 /**
- * Registro dos nós (Leader / Followers) conhecido pelo Gateway.
- * Implementa Heartbeat com timeout para marcar nós como inativos.
+ * ServiceRegistry
+ * ----------------
+ * Mantém registro dos nós (A1, A2, B1...), seus IPs, portas,
+ * último heartbeat e papel (LEADER/FOLLOWER).
+ *
+ * O Gateway usa esse registro para:
+ *  - descobrir o líder
+ *  - listar followers
+ *  - enviar lista de peers para os nodes
+ *  - monitorar falhas (timeout de heartbeat)
  */
 public class ServiceRegistry {
 
     // Mapa: nodeId -> informações do nó
     private final Map<String, NodeInfo> registry = new ConcurrentHashMap<>();
 
-    // Tempo máximo sem heartbeat para considerar nó morto (ms)
-    private static final long HEARTBEAT_TIMEOUT_MS = 5_000;
+    // Tempo máximo sem heartbeat antes de marcar o nó como morto
+    private static final long HEARTBEAT_TIMEOUT_MS = 5000;
 
+    /**
+     * Estrutura com informações básicas do nó.
+     * Enviada ao Gateway via REGISTER (UDP).
+     */
     public static class NodeInfo {
         public final String nodeId;
         public final String ip;
         public final int port;
-        public String role; // "LEADER", "FOLLOWER" etc.
+        public String role; // "LEADER" ou "FOLLOWER"
         public volatile long lastHeartbeatTime;
         public volatile boolean isActive;
 
@@ -35,18 +47,13 @@ public class ServiceRegistry {
 
         @Override
         public String toString() {
-            return "NodeInfo{" +
-                    "nodeId='" + nodeId + '\'' +
-                    ", ip='" + ip + '\'' +
-                    ", port=" + port +
-                    ", role='" + role + '\'' +
-                    ", lastHeartbeatTime=" + lastHeartbeatTime +
-                    ", isActive=" + isActive +
-                    '}';
+            return "NodeInfo{nodeId='" + nodeId + "', ip='" + ip +
+                    "', port=" + port + ", role='" + role +
+                    "', active=" + isActive + "}";
         }
     }
 
-    // Singleton
+    // Singleton do Gateway
     private static final ServiceRegistry instance = new ServiceRegistry();
 
     private ServiceRegistry() {
@@ -57,16 +64,21 @@ public class ServiceRegistry {
         return instance;
     }
 
-    // Registro inicial do nó (startup)
+    // ------------------------------------------------------------
+    // REGISTRO / HEARTBEAT
+    // ------------------------------------------------------------
+
+    /** Registro inicial enviado pelo Node via UDP */
     public synchronized void registerNode(String nodeId, String ip, int port, String role) {
         NodeInfo info = new NodeInfo(nodeId, ip, port, role);
         registry.put(nodeId, info);
         System.out.println("[registry] registered: " + info);
     }
 
-    // Atualizar heartbeat (no recebe sinal de vida)
+    /** Atualiza heartbeat vindo dos nodes */
     public void updateHeartbeat(String nodeId) {
         NodeInfo info = registry.get(nodeId);
+
         if (info != null) {
             info.lastHeartbeatTime = System.currentTimeMillis();
             if (!info.isActive) {
@@ -78,7 +90,9 @@ public class ServiceRegistry {
         }
     }
 
-    // Thread periódica para verificar nós mortos
+    // ------------------------------------------------------------
+    // VERIFICAÇÃO DE TIMEOUT DE HEARTBEAT
+    // ------------------------------------------------------------
     private void startCleanupTask() {
         Thread t = new Thread(() -> {
             while (true) {
@@ -86,16 +100,15 @@ public class ServiceRegistry {
                     Thread.sleep(HEARTBEAT_TIMEOUT_MS);
                     checkHeartbeats();
                 } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
                     break;
                 }
             }
         });
+
         t.setDaemon(true);
         t.start();
     }
 
-    // Verifica se algum nó ultrapassou o timeout
     private void checkHeartbeats() {
         long now = System.currentTimeMillis();
         for (NodeInfo info : registry.values()) {
@@ -108,64 +121,60 @@ public class ServiceRegistry {
         }
     }
 
-    // Pegar Leader ativo (para WRITE)
+    // ------------------------------------------------------------
+    // CONSULTAS
+    // ------------------------------------------------------------
+
+    /** Retorna o líder ativo atual */
     public Optional<NodeInfo> getActiveLeader() {
         return registry.values().stream()
-                .filter(info -> "LEADER".equalsIgnoreCase(info.role) && info.isActive)
+                .filter(n -> n.isActive && "LEADER".equalsIgnoreCase(n.role))
                 .findFirst();
     }
 
-    // Pegar Followers ativos (para READ / replicação)
-    public List<NodeInfo> getActiveFollowers() {
-        return registry.values().stream()
-                .filter(info -> "FOLLOWER".equalsIgnoreCase(info.role) && info.isActive)
-                .collect(Collectors.toList());
-    }
-
-    // Pegar qualquer réplica ativa (para READ simples)
+    /** Retorna qualquer réplica ativa (para READ) */
     public Optional<NodeInfo> getAnyActiveReplica() {
         return registry.values().stream()
-                .filter(info -> info.isActive)
+                .filter(n -> n.isActive)
                 .findAny();
     }
 
-    public Collection<NodeInfo> listAllNodes() {
-        return Collections.unmodifiableCollection(registry.values());
-    }
-
-    // ------------------------------------------------------
-    // RETORNAR TODOS OS NÓS ATIVOS
-    // ------------------------------------------------------
+    /** Retorna lista de todos os nós ativos */
     public List<NodeInfo> getActiveNodes() {
-        return registry.values()
-                .stream()
+        return registry.values().stream()
                 .filter(n -> n.isActive)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    // ------------------------------------------------------
-    // CONTAR NÓS ATIVOS
-    // ------------------------------------------------------
+    /** Quantidade de nós ativos */
     public int countActiveNodes() {
-        return (int) registry.values()
-                .stream()
+        return (int) registry.values().stream()
                 .filter(n -> n.isActive)
                 .count();
     }
 
-    // ------------------------------------------------------
-    // RETORNAR LISTA DE PEERS (para enviar ao Node)
-    // ------------------------------------------------------
-    public String toPeersJson() {
-        var list = registry.values()
-                .stream()
+    /** Lista completa dos nós */
+    public Collection<NodeInfo> listAllNodes() {
+        return Collections.unmodifiableCollection(registry.values());
+    }
+
+    // ------------------------------------------------------------
+    // JSON DE PEERS PARA ENVIAR AOS NODES
+    // ------------------------------------------------------------
+
+    /**
+     * Retorna um JSON com todos os peers ativos, no formato:
+     *
+     * { "peers": [ { "nodeId":"A1", "ip":"127.0.1.1", "port":6000 }, ... ] }
+     */
+    public String buildPeersJson() {
+        String peersArray = registry.values().stream()
                 .filter(n -> n.isActive)
                 .map(n -> String.format(
                         "{\"nodeId\":\"%s\",\"ip\":\"%s\",\"port\":%d}",
-                        n.nodeId, n.ip, n.port
-                ))
+                        n.nodeId, n.ip, n.port))
                 .collect(Collectors.joining(","));
 
-        return "[" + list + "]";
+        return "{ \"peers\": [" + peersArray + "] }";
     }
 }
